--- a/style.css
+++ b/style.css
@@ -138,3 +138,47 @@ body {
     color: whitesmoke;
     text-shadow: 0px 0px 3px rgb(0, 0, 0);
 }
+
+@media only screen and (max-width: 940px) {
+    .responsive.posicao {
+        width: 40%;
+        margin: 0 5%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      padding: 0 10px;
+      margin: 6px 0;
+    }
+
+    .responsive.posicao {
+        width: 49.99999%;
+        padding: 0 10px;
+        margin: 6px 0;
+    }
+
+    video {
+        width: 80%;
+    }
+}
+  
+@media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+
+    .responsive.posicao{
+        width: 100%;
+    }
+
+    main {
+        width: 80%;
+        text-align: left;
+    }
+    
+    video {
+        width: 80%;
+    }
+}
