--- a/style.css
+++ b/style.css
@@ -140,45 +140,36 @@ body {
 }
 
 @media only screen and (max-width: 940px) {
-    .responsive.posicao {
-        width: 40%;
-        margin: 0 5%;
-    }
-}
-
-@media only screen and (max-width: 700px) {
-    .responsive {
-      width: 49.99999%;
-      padding: 0 10px;
-      margin: 6px 0;
-    }
-
-    .responsive.posicao {
-        width: 49.99999%;
-        padding: 0 10px;
-        margin: 6px 0;
-    }
-
-    video {
-        width: 80%;
-    }
-}
-  
-@media only screen and (max-width: 500px) {
-    .responsive {
-      width: 100%;
-    }
-
-    .responsive.posicao{
+    .caixa-cabecalho {
         width: 100%;
     }
 
-    main {
-        width: 80%;
-        text-align: left;
+    html {
+        width: 100%;
     }
     
-    video {
-        width: 80%;
+    .info-box {
+        position: static;
+        width: 100%;
+        border: none;
+    }
+    
+    .navegacao li {
+        width: 100%;
+    }
+
+    .caixa-main {
+        width: 90%;
+        margin: none;
+    }
+
+    .caixa-main li {
+        display: inline-block;
+        width: 100%;
+    }
+    
+    .imagem-casa {
+        width: 100%;
+        height: 200px;
     }
 }
